[tool.poetry]
name = "repl_python3_openCv-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
Flask = "^2.2.2"
Flask-SocketIO = "^5.3.1"
Flask-Cors = "^3.0.10"
mediapipe = "^0.8.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
